@@ -13,4 +13,8 @@
 		<filename plugin="joomla">joomla.php</filename>
 		<filename>index.html</filename>
 	</files>
+	<languages>
+		<language tag="en-GB">en-GB.plg_authentication_joomla.ini</language>
+		<language tag="en-GB">en-GB.plg_authentication_joomla.sys.ini</language>
+	</languages>	
 </extension>
