@@ -13,7 +13,10 @@
 		<filename>index.html</filename>
 		<folder>geshi</folder>
 	</files>
-
+	<languages>
+		<language tag="en-GB">en-GB.plg_content_geshi.ini</language>
+		<language tag="en-GB">en-GB.plg_content_geshi.sys.ini</language>
+	</languages>
 	<config>
 		<fields name="params">
 		</fields>
