@@ -14,7 +14,10 @@
 		<filename plugin="joomla">joomla.php</filename>
 		<filename>index.html</filename>
 	</files>
-
+	<languages>
+		<language tag="en-GB">en-GB.plg_content_joomla.ini</language>
+		<language tag="en-GB">en-GB.plg_content_joomla.sys.ini</language>
+	</languages>
 	<config>
 		<fields name="params">
 			<fieldset name="basic">
