@@ -13,4 +13,12 @@
 		<filename plugin="vote">vote.php</filename>
 		<filename>index.html</filename>
 	</files>
+	<languages>
+		<language tag="en-GB">en-GB.plg_content_vote.ini</language>
+		<language tag="en-GB">en-GB.plg_content_vote.sys.ini</language>
+	</languages>
+	<config>
+		<fields name="params">
+		</fields>
+	</config>
 </extension>
