@@ -12,4 +12,8 @@
 	<files>
 		<filename plugin="image">image.php</filename>
 		<filename>index.html</filename>	</files>
+	<languages>
+		<language tag="en-GB">en-GB.plg_editors-xtd_image.ini</language>
+		<language tag="en-GB">en-GB.plg_editors-xtd_image.sys.ini</language>
+	</languages>
 </extension>
