@@ -13,4 +13,8 @@
 		<filename plugin="pagebreak">pagebreak.php</filename>
 		<filename>index.html</filename>
 	</files>
+	<languages>
+		<language tag="en-GB">en-GB.plg_editors-xtd_pagebreak.ini</language>
+		<language tag="en-GB">en-GB.plg_editors-xtd_pagebreak.sys.ini</language>
+	</languages>
 </extension>
