@@ -13,4 +13,8 @@
 		<filename plugin="readmore">readmore.php</filename>
 		<filename>index.html</filename>
 	</files>
+	<languages>
+		<language tag="en-GB">en-GB.plg_editors-xtd_readmore.ini</language>
+		<language tag="en-GB">en-GB.plg_editors-xtd_readmore.sys.ini</language>
+	</languages>
 </extension>
