@@ -12,4 +12,8 @@
 	<files>
 		<filename plugin="none">none.php</filename>
 		<filename>index.html</filename>	</files>
+	<languages>
+		<language tag="en-GB">en-GB.plg_editors_none.ini</language>
+		<language tag="en-GB">en-GB.plg_editors_none.sys.ini</language>
+	</languages>
 </extension>
