@@ -13,4 +13,8 @@
 		<filename plugin="example">example.php</filename>
 		<filename>index.html</filename>
 	</files>
+	<languages>
+		<language tag="en-GB">en-GB.plg_extension_example.ini</language>
+		<language tag="en-GB">en-GB.plg_extension_example.sys.ini</language>
+	</languages>
 </extension>
