@@ -13,7 +13,10 @@
 		<filename plugin="weblinks">weblinks.php</filename>
 		<filename>index.html</filename>
 	</files>
-
+	<languages>
+		<language tag="en-GB">en-GB.plg_search_weblinks.ini</language>
+		<language tag="en-GB">en-GB.plg_search_weblinks.sys.ini</language>
+	</languages>
 	<config>
 		<fields name="params">
 
