@@ -13,7 +13,10 @@
 		<filename plugin="cache">cache.php</filename>
 		<filename>index.html</filename>
 	</files>
-
+	<languages>
+		<language tag="en-GB">en-GB.plg_system_cache.ini</language>
+		<language tag="en-GB">en-GB.plg_system_cache.sys.ini</language>
+	</languages>
 	<config>
 	<fields name="params">
 
