@@ -13,4 +13,8 @@
 		<filename plugin="remember">remember.php</filename>
 		<filename>index.html</filename>
 	</files>
+	<languages>
+		<language tag="en-GB">en-GB.plg_system_remember.ini</language>
+		<language tag="en-GB">en-GB.plg_system_remember.sys.ini</language>
+	</languages>
 </extension>
