@@ -17,7 +17,6 @@
 		<language tag="en-GB">en-GB.plg_user_contactcreator.ini</language>
 		<language tag="en-GB">en-GB.plg_user_contactcreator.sys.ini</language>
 	</languages>
-
 	<config>
 		<fields name="params">
 
